# eced3901-2025-team04

./: CMakeLists.txt  Camera.py  Node code  QR code  README.md  dt3_thread.py  eced3901_dt3  eced3901_dt3.py  eced3901_serialcode.py  eced3901_waypoint.py  main.c  publisher_member_function.py  servo.py  servo_rasp.ino  setup.py  src_amcl_localization_amcl_localization_amcl_node.py
amcl_localization.egg-info/: SOURCES.txt
config/: mapper_params_online_async.yaml
eced3901/: eced3901_NodeCode.py  eced3901_dt1.py  package.xml  publisher_member_function.py  setup.py  src_amcl_localization_package (1).xml  src_amcl_localization_setup.py
install/amcl_localization/share/amcl_localization/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/eced3901/lib/eced3901/: dt1  talker
install/eced3901/share/eced3901/: package.dsv  package.ps1  package.sh
install/eced3901/share/eced3901/launch/: launch_slam_toolbox.py
launch/: slam_toolbox_launch.py
log/: latest_build
params/: navigation_params.yaml
src/install/amcl_localization/share/amcl_localization/: package.sh
src/install/eced3901/lib/eced3901/: serialsensor
src/install/eced3901/share/eced3901/: package.bash  package.sh  package.zsh
src/install/eced3901/share/eced3901/launch/: lab6nav.launch.py
src/log/: latest_build
